[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/Map.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://Scripts/PlayerManager.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=5]
[ext_resource path="res://Scripts/ScoreManager.gd" type="Script" id=6]
[ext_resource path="res://Scripts/GUIMobile.gd" type="Script" id=7]
[ext_resource path="res://Scripts/ItemSpawner.gd" type="Script" id=8]
[ext_resource path="res://Scripts/InputManager.gd" type="Script" id=9]
[ext_resource path="res://Scenes/MobileMenuButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Fonts/Medium.tres" type="DynamicFont" id=11]
[ext_resource path="res://Assets/Fonts/Large.tres" type="DynamicFont" id=12]
[ext_resource path="res://Assets/ui_theme.tres" type="Theme" id=13]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=14]
[ext_resource path="res://Scripts/GameOverMenu.gd" type="Script" id=15]
[ext_resource path="res://Assets/Fonts/Small.tres" type="DynamicFont" id=16]
[ext_resource path="res://Scripts/LevelInfo.gd" type="Script" id=17]
[ext_resource path="res://Scenes/StarContainer.tscn" type="PackedScene" id=18]
[ext_resource path="res://Assets/Fonts/Tiny.tres" type="DynamicFont" id=19]
[ext_resource path="res://Scripts/EffectsManager.gd" type="Script" id=20]
[ext_resource path="res://Assets/CornerDecoration.png" type="Texture" id=21]
[ext_resource path="res://Scripts/CornerDecorations.gd" type="Script" id=22]
[ext_resource path="res://Assets/Fonts/OriginalSurfer-Regular.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=24]
[ext_resource path="res://Animations/FadeIn.tres" type="Animation" id=25]
[ext_resource path="res://Assets/Fonts/Body-Medium.tres" type="DynamicFont" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 340, 540 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.286275, 0.172549, 0.0313726, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.843137, 0.584314, 0.278431, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 10

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 3
outline_color = Color( 0.752941, 0.431373, 0.0745098, 1 )
use_filter = true
font_data = ExtResource( 23 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )

[node name="EffectsTween" type="Tween" parent="."]
pause_mode = 2

[node name="CornerDecorations" type="CanvasLayer" parent="."]
layer = -2
script = ExtResource( 22 )

[node name="Corner1" type="Sprite" parent="CornerDecorations"]
position = Vector2( 256, 192 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 21 )

[node name="Corner2" type="Sprite" parent="CornerDecorations"]
position = Vector2( 1675.68, 192 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 21 )
flip_h = true

[node name="Corner3" type="Sprite" parent="CornerDecorations"]
position = Vector2( 1675.68, 874.293 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 21 )
flip_h = true
flip_v = true

[node name="Corner4" type="Sprite" parent="CornerDecorations"]
position = Vector2( 243.286, 874.293 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 21 )
flip_v = true

[node name="GameOverMenu" type="CanvasLayer" parent="."]
pause_mode = 2
layer = -1
script = ExtResource( 15 )

[node name="Control" type="Control" parent="GameOverMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="GameOverMenu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu/Control/CenterContainer"]
margin_left = 521.0
margin_top = 170.0
margin_right = 1398.0
margin_bottom = 909.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="GameOverMenu/Control/CenterContainer/VBoxContainer"]
margin_right = 877.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 12 )
text = "Game Over"
align = 1

[node name="Body" type="Label" parent="GameOverMenu/Control/CenterContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 877.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 11 )
text = "You scored X points! Well done."
autowrap = true

[node name="Stars" parent="GameOverMenu/Control/CenterContainer/VBoxContainer" instance=ExtResource( 18 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 334.0
margin_right = 877.0
margin_bottom = 634.0

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverMenu/Control/CenterContainer/VBoxContainer"]
margin_top = 638.0
margin_right = 877.0
margin_bottom = 739.0
custom_constants/separation = 15

[node name="Restart" type="Button" parent="GameOverMenu/Control/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 353.0
margin_bottom = 101.0
theme = ExtResource( 13 )
text = "Restart (R)"

[node name="Continue" type="Button" parent="GameOverMenu/Control/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 368.0
margin_right = 877.0
margin_bottom = 101.0
theme = ExtResource( 13 )
text = "Continue (ANY)"

[node name="Timer" type="Timer" parent="GameOverMenu"]
one_shot = true

[node name="ScoreManager" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="ScoreManager"]

[node name="Map" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="ShiftTween" type="Tween" parent="Map"]

[node name="PlayerManager" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="Spawner"]
one_shot = true

[node name="ItemSpawner" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="ItemSpawner"]
one_shot = true

[node name="UI" type="Node2D" parent="."]
z_index = 4096
z_as_relative = false

[node name="EffectsManager" type="Node2D" parent="."]
pause_mode = 2
z_index = 4096
script = ExtResource( 20 )

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="GUIMobile" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="MenuButton1" parent="GUIMobile" instance=ExtResource( 10 )]

[node name="MenuButton2" parent="GUIMobile" instance=ExtResource( 10 )]

[node name="PauseMenu" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 10
script = ExtResource( 14 )

[node name="Control" type="Control" parent="PauseMenu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.576471 )

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Control/CenterContainer"]
margin_left = 817.0
margin_top = 378.0
margin_right = 1103.0
margin_bottom = 701.0
custom_constants/separation = 10

[node name="Restart" type="Button" parent="PauseMenu/Control/CenterContainer/VBoxContainer"]
margin_right = 286.0
margin_bottom = 101.0
theme = ExtResource( 13 )
text = "Restart"

[node name="Back" type="Button" parent="PauseMenu/Control/CenterContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 286.0
margin_bottom = 212.0
theme = ExtResource( 13 )
text = "Go Back"

[node name="Close" type="Button" parent="PauseMenu/Control/CenterContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 286.0
margin_bottom = 323.0
theme = ExtResource( 13 )
text = "Close"

[node name="LevelInfo" type="CanvasLayer" parent="."]
script = ExtResource( 17 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="LevelInfo"]
shape = SubResource( 1 )

[node name="Control" type="Control" parent="LevelInfo"]
margin_bottom = 1080.0
rect_min_size = Vector2( 680, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="LevelInfo/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Panel" parent="LevelInfo/Control/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 660.0
margin_bottom = 1060.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="LevelInfo/Control/MarginContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LevelInfo/Control/MarginContainer/ColorRect/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 1020.0
rect_min_size = Vector2( 600, 0 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heading" type="Label" parent="LevelInfo/Control/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.113725, 0.0431373, 0.00784314, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Level Name"
align = 1
autowrap = true

[node name="Desc" type="Label" parent="LevelInfo/Control/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 600.0
margin_bottom = 136.0
custom_fonts/font = ExtResource( 26 )
text = "Description"
autowrap = true

[node name="Stars" parent="LevelInfo/Control/MarginContainer/ColorRect/MarginContainer/VBoxContainer" instance=ExtResource( 18 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 151.0
margin_right = 600.0
margin_bottom = 451.0

[node name="Instruction" type="Label" parent="LevelInfo/Control/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 466.0
margin_right = 600.0
margin_bottom = 507.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 0.376471 )
text = "(Move all players to this level to start.)"
align = 1
autowrap = true

[node name="Instruction2" type="Label" parent="LevelInfo/Control/MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 522.0
margin_right = 600.0
margin_bottom = 563.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 0.215686 )
text = "(Get 2+ stars to unlock the next level)"
align = 1
autowrap = true

[node name="MarginContainer" type="MarginContainer" parent="LevelInfo"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -292.0
margin_bottom = 101.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="LevelInfo/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 272.0
margin_bottom = 81.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="LevelInfo/MarginContainer/HBoxContainer"]
margin_top = 20.0
margin_right = 155.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 19 )
text = "(Backspace/Select)"

[node name="Exit" type="Button" parent="LevelInfo/MarginContainer/HBoxContainer"]
margin_left = 175.0
margin_right = 252.0
margin_bottom = 61.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 16 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelInfo"]
anims/FadeIn = ExtResource( 25 )

[node name="Tutorial" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 24 )

[node name="Timer" type="Timer" parent="Tutorial"]
wait_time = 0.5
one_shot = true

[node name="Control" type="Control" parent="Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Tutorial/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Tutorial/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="TextureRect" parent="Tutorial/Control/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0
expand = true
stretch_mode = 6

[node name="Control" type="Control" parent="Tutorial/Control/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1915.0
margin_bottom = 1075.0

[node name="Label" type="Label" parent="Tutorial/Control/MarginContainer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -940.0
margin_top = -81.0
margin_right = 940.0
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
text = "Press anything / Tap anywhere to continue (1/1)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="GameOverMenu/Control/CenterContainer/VBoxContainer/HBoxContainer/Restart" to="GameOverMenu" method="_on_Restart_pressed"]
[connection signal="pressed" from="GameOverMenu/Control/CenterContainer/VBoxContainer/HBoxContainer/Continue" to="GameOverMenu" method="_on_Continue_pressed"]
[connection signal="timeout" from="GameOverMenu/Timer" to="GameOverMenu" method="_on_Timer_timeout"]
[connection signal="timeout" from="ScoreManager/Timer" to="ScoreManager" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Map/ShiftTween" to="Map" method="_on_ShiftTween_tween_completed"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
[connection signal="timeout" from="ItemSpawner/Timer" to="ItemSpawner" method="_on_Timer_timeout"]
[connection signal="pressed" from="PauseMenu/Control/CenterContainer/VBoxContainer/Restart" to="PauseMenu" method="_on_Restart_pressed"]
[connection signal="pressed" from="PauseMenu/Control/CenterContainer/VBoxContainer/Back" to="PauseMenu" method="_on_Back_pressed"]
[connection signal="pressed" from="PauseMenu/Control/CenterContainer/VBoxContainer/Close" to="PauseMenu" method="_on_Close_pressed"]
[connection signal="released" from="LevelInfo/TouchScreenButton" to="LevelInfo" method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="LevelInfo/MarginContainer/HBoxContainer/Exit" to="LevelInfo" method="_on_Exit_pressed"]
[connection signal="timeout" from="Tutorial/Timer" to="Tutorial" method="_on_Timer_timeout"]
